--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,40 @@
-*node_modules
+# Node modules folder
+node_modules/
+
+# Environment variable files
+.env
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# Editor-specific files
+.vscode/
+.idea/
+*.swp
+
+# Build artifacts
+dist/
+build/
+
+# Optional npm cache files
+.npm/
+
+# Coverage directories (for testing)
+coverage/
+
+# Debug files
+*.pid
+*.seed
+*.pid.lock
+
+# Temporary files
+*.tmp
+*.temp
