--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "node src/app.js"
   },
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mongoose": "^8.9.5"
   }
 }
