--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
     "razorpay": "^2.9.6",
+    "socket.io": "^4.8.1",
     "validator": "^13.12.0"
   }
 }
